--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
-                                <div class="Melihat Alam">melihat alam</div>
+                                <div class="project-name">melihat alam</div>
                             </div>
                         </a>
                     </div>
