--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             <div class="container-fluid p-0">
                 <div class="row g-0">
                     <div class="col-lg-4 col-sm-6">
-                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg" title="nobar anime">
+                        <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.mp4" title="nobar anime">
                             <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="..." />
                             <div class="portfolio-box-caption">
                                 <div class="project-category text-white-50">Category</div>
